# VinD

./: .gitignore  README.md  main.py  modal_app.py  pyproject.toml  run_tribe.py  tribe_preds.npz  tribe_segments.pkl  web.py
static/: style.css
templates/: base.html  index.html  results.html
templates/partials/: done.html  error.html  progress.html
tests/: test_connectivity.py  test_pipeline.py
vinD/: __init__.py  advanced.py  cli.py  connectivity.py  metrics.py  moments.py  parcellation.py  pipeline.py  plots.py  report.py
