[project]
name = "vind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.3",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "nilearn>=0.13.1",
    "nimare>=0.11.2",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
